# Connect

./: .gitignore  404.html  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  index.html  makefile  openapi.json  pyproject.toml  redoc.html
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 0ffddaed626c_rename_subscription_table.py  1daca10a6acf_fix_db.py  34b6e6ea1c0b_base.py  42a48caaf175_add_delete_photo_after_days.py  6da25c61c481_add_delete_photo_after_days.py  74ada424232e_fix_userprofile_photo_column.py  74e8a59d4b52_.py  7737101cd21a_fix.py  80eed0eb0a05_.py  81adf23739b8_db_inti.py  83a89a2dcdaa_init.py  b35644be6ca8_fix_photo_in_userprofile_by_settings_.py  b41d3e92df6d_posts_init.py  d0fd9d251de9_.py
app/: dependecy.py  exception.py  main.py  settings.py
app/infrastructure/: dependecy.py
app/infrastructure/cache/: accessor.py
app/infrastructure/celery/: conf.py  repository.py  service.py  tasks.py
app/infrastructure/database/: __init__.py  database.py
app/posts/: handlers.py  models.py  schema.py  service.py
app/posts/repository/: cache_post.py  post.py
app/users/auth/: handlers.py  repository.py  service.py
app/users/subscription/: handlers.py  models.py  repository.py  schema.py  service.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
app/users/users_settings/: handlers.py  models.py  (+3 more)
app/yandex_disk/: __init__.py  repository.py  service.py
infra/: Dockerfile  docker-compose.yml
tests/: conftest.py
tests/fixtures/: infrastructure.py
(+12 files in other folders)
