[project]
name = "connect"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Fayfer",email = "fayfer2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rollbar (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bugsnag (>=4.7.1,<5.0.0)",
    "sentry-sdk (>=2.27.0,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "faker (>=37.1.0,<38.0.0)",
    "pytest-factoryboy (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
